kubernetes/resources/05-apps/home-assistant/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx
  labels:
    app: home-assistant
spec:
  tls:
  - hosts:
    - assistant.k8s.iaminyourpc.xyz
    secretName: tls-assistant-k8s-iaminyourpc-xyz
  rules:
  - host: assistant.k8s.iaminyourpc.xyz
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: home-assistant
            port:
              number: 8080
